Fix placement of new polio cases overlay
- Set the z-index of the new cases element to 999 so it's still
  below the menu containers
- Remove the "right" property from the styling so that the label
  doesn't span the whole chart and cover up labels unnecessarily

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -7504,9 +7504,8 @@ svg {
   color: #AF373E;
   position: absolute;
   top: 0;
-  right: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 999;
   padding: 0 2pt;
   font-size: 9pt;
 }
@@ -7596,59 +7595,6 @@ svg {
 
 /*# sourceMappingURL=style.css.map */
 
-table .th-inner {
-  min-width: 80px;
-}
-table td.editable {
-  width: 80px;
-  padding: 2px;
-  /* cell status */
-}
-table td.editable .displayValue,
-table td.editable .editControl {
-  width: 100%;
-  height: 100%;
-  padding: 4px 6px;
-}
-table td.editable .displayValue {
-  cursor: pointer;
-  min-height: 20px;
-}
-table td.editable .editControl {
-  display: none;
-  border: 1px solid #aaa;
-  font-size: inherit;
-}
-table td.editable .editControl:focus {
-  outline: 0;
-}
-table td.editable.editing .displayValue {
-  display: none;
-}
-table td.editable.editing .editControl {
-  display: block;
-}
-table td.editable.missing .displayValue {
-  background-color: #ffeb86;
-}
-table .completionStatus {
-  font-size: .9em;
-}
-
-.completionStatus {
-  font-weight: bold;
-}
-
-.empty,
-.loading {
-  background-color: #fafafa;
-  color: #999;
-  text-align: center;
-  padding: 40px 0;
-}
-
-/*# sourceMappingURL=style.css.map */
-
 .tooltip {
   display: inline;
   position: absolute;
@@ -7716,4 +7662,57 @@ table .completionStatus {
   border-left-color: rgba(72, 72, 77, 0.96);
   top: 8px;
   right: -14px;
+}
+
+/*# sourceMappingURL=style.css.map */
+
+table .th-inner {
+  min-width: 80px;
+}
+table td.editable {
+  width: 80px;
+  padding: 2px;
+  /* cell status */
+}
+table td.editable .displayValue,
+table td.editable .editControl {
+  width: 100%;
+  height: 100%;
+  padding: 4px 6px;
+}
+table td.editable .displayValue {
+  cursor: pointer;
+  min-height: 20px;
+}
+table td.editable .editControl {
+  display: none;
+  border: 1px solid #aaa;
+  font-size: inherit;
+}
+table td.editable .editControl:focus {
+  outline: 0;
+}
+table td.editable.editing .displayValue {
+  display: none;
+}
+table td.editable.editing .editControl {
+  display: block;
+}
+table td.editable.missing .displayValue {
+  background-color: #ffeb86;
+}
+table .completionStatus {
+  font-size: .9em;
+}
+
+.completionStatus {
+  font-weight: bold;
+}
+
+.empty,
+.loading {
+  background-color: #fafafa;
+  color: #999;
+  text-align: center;
+  padding: 40px 0;
 }
